<resources>
    <string name="app_name">FitBleKit</string>

    <!--权限-->
    <string name="permission_request_title">FitBleKit needs to get some permissions on your device</string>
    <string name="permission_request_goto_settings">Go to set</string>
    <string name="permission_request_failed">Failed to get permission</string>
    <string name="permission_rationale_storage">Get device storage permissions to access cached data</string>
    <string name="permission_rationale_camera">Get photo permission to set the user\'s avatar scanning device QR code, etc.</string>
    <string name="permission_rationale_ble_location">Get device location permissions to use device Bluetooth function properly.</string>
    <string name="permission_rationale_phone_wifi_state">Get device information privileges to collect error information for this APP.</string>
    <string name="permission_rationale_record_audio">Get device recording permission to collect error information for this APP.</string>
    <string name="permission_rationale_get_tasks">Get the device\'s latest task permission to collect error information for this APP.</string>
    <string name="permission_deny_result_remind">Otherwise, you will not be able to use EasyOTA properly.</string>
    <string name="permission_request_in_settings_page_path">Set the path: Settings -> Application -> EasyOTA -> Permissions</string>

    <string name="common_confirm">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="return_txt">Return</string>
    <array name="device_type">
        <item>Tracker</item>
        <item>Scale</item>
        <item>Heart rate monitor</item>
        <item>Cadence</item>
        <item>Jump</item>
        <item>Arm band</item>
        <item>Kettlebell</item>
        <item>Bike computer</item>
        <item>HUB config</item>
        <item>Boxing</item>
    </array>

    <!--设备类型 start-->
    <string name="old_protocol_scale">Old protocol scale</string>
    <string name="new_protocol_scale">New protocol scale</string>
    <string name="old_protocol_traker">Old protocol traker</string>
    <string name="new_protocol_traker">New protocol traker</string>
    <string name="heart_rate_monitor">Heart rate monitor</string>
    <string name="cadence">Cadence</string>
    <string name="jump">Jump</string>
    <string name="armband">Armband</string>
    <string name="kettle_bell">Kettle bell</string>
    <string name="bike_computer">Bike computer</string>
    <string name="hub">Hub</string>
    <string name="boxing">Boxing</string>
    <string name="broadcasting">BroadcastingScale</string>
    <!--设备类型 end-->

    <string name="scan_dev">Scan device</string>
    <string name="my_device">My devices</string>
    <string name="stpes_walk">Connected</string>
    <string name="device_connecting">Connecting</string>
    <string name="un_stpes_walk">Disconnected</string>
    <string name="old_protocol_tracker_has_no_need_to_set_param">Old protocol tracker has no need to set param</string>
    <string name="current_real_time_data">Current real time data</string>
    <string name="real_time_heart_rate">Real time heart rate</string>

    <string name="weight_index">BMI</string>
    <string name="weight_body_fat">Body fat</string>
    <string name="weight_bone">Bone</string>
    <string name="weight_visceral_fat">Visceral fat</string>
    <string name="weight_metabolism">Basal metabolism</string>
    <string name="weight_muscle">Muscle mass</string>
    <string name="weight_water">Water</string>

    <string name="Weight">Weight</string>
    <string name="connected">Connected</string>
    <string name="unconnected">Disconnected</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="disconnected">Disconnected</string>
    <string name="unbind">Unbind</string>
    <string name="history_device">Historical device</string>
    <string name="history_data">History data</string>
    <string name="device_not_connected_can_not_operate">Device not connected, can not operate!</string>
    <string name="input_pair_code_reminder">Please input pair password</string>
    <string name="synch_history">Synchronize historical data</string>
    <string name="get_fit_file_name_list">Get a list of fit filenames</string>
    <string name="pairing_password_incorrect_reminder">The pairing password is incorrect!</string>
    <string name="pairing_password_format_invalid">The paired password must be 6 digits!</string>
    <string name="device_is_not_ready">Device is not ready yet!</string>
    <string name="battery_level">Battery level</string>
    <string name="get_battery_level">Get battery level</string>
    <string name="synchronize_history_data">Synchronize history data</string>
    <string name="heart_rate">Heart rate</string>
    <string name="setting">Setting</string>
    <string name="send_call_reminder">Send call reminder</string>
    <string name="set_sleep_time">Set sleep time</string>
    <string name="set_utc">Set UTC</string>
    <string name="set_user_info">Set user information</string>
    <string name="set_alarm">Set alarm clock</string>
    <string name="set_sedentary_reminder">Set sedentary reminder</string>
    <string name="set_drinking_water_reminder">Set drinking water reminder</string>
    <string name="set_alarm_switch">Set alarm switch</string>
    <string name="set_the_health_reminder_switch">Set the health reminder switch</string>
    <string name="switch_real_time_data_switch">switch real time data switch</string>
    <string name="message_reminder_switch">Message reminder switch</string>
    <string name="entry_heart_rate_mode">Entry heart rate mode</string>
    <string name="entry_photo_mode">Entry photo mode</string>
    <string name="pair">Pair</string>


</resources>
