<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/setting_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/set_user_info" />

        <Button
            android:id="@+id/setting_auto_sleep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/set_sleep_time" />

        <Button
            android:id="@+id/setting_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/set_alarm" />

        <Button
            android:id="@+id/setting_long_move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/set_sedentary_reminder" />

        <Button
            android:id="@+id/setting_water"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/set_drinking_water_reminder" />

        <Button
            android:id="@+id/setting_alarm_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/set_alarm_switch" />

        <Button
            android:id="@+id/setting_health_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/set_the_health_reminder_switch" />

        <Button
            android:id="@+id/setting_disturb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/switch_real_time_data_switch" />

        <Button
            android:id="@+id/setting_msg_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/message_reminder_switch" />

        <Button
            android:id="@+id/setting_android_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="发送Android消息"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/android_msg_type_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <EditText
                android:id="@+id/android_msg_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="input android msg" />

            <TextView
                android:id="@+id/send_android_msg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="send android msg"
                android:textColor="@color/black" />

        </LinearLayout>

        <Button
            android:id="@+id/setting_utc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/set_utc"
            android:visibility="visible" />

        <Button
            android:id="@+id/setting_heartrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/entry_heart_rate_mode" />

        <Button
            android:id="@+id/setting_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/entry_photo_mode" />

        <Button
            android:id="@+id/pair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/pair"
            android:visibility="visible" />
    </LinearLayout>
</ScrollView>