<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_current_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_current_step_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#1d0000ff"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/battery_level"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_battery_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="--"
                    android:textColor="@color/black" />

            </LinearLayout>

            <Button
                android:id="@+id/get_battery_level_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/get_battery_level" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_sync_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/synchronize_history_data" />

        <Button
            android:id="@+id/btn_sport_day_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onClick"
            android:text="data of every day"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_history_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onClick"
            android:text="detial data"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_startHeart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/heart_rate" />

        <Button
            android:id="@+id/btn_device_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/setting" />

        <Button
            android:id="@+id/send_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/send_call_reminder" />

        <Button
            android:id="@+id/set_sleep_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/set_sleep_time" />

        <Button
            android:id="@+id/setting_utc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/set_utc"
            android:visibility="visible" />

        <TextView
            android:id="@+id/history_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black" />
    </LinearLayout>
</ScrollView>